--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~6.1.1",
-    "@angular/core": "~6.1.1",
-    "@angular/forms": "~6.1.1",
-    "@angular/http": "~6.1.1",
-    "@angular/platform-browser": "~6.1.1",
-    "@angular/platform-browser-dynamic": "~6.1.1",
-    "@angular/router": "~6.1.1",
+    "@angular/common": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
-    "@ionic/angular": "4.0.0-beta.7",
+    "@ionic/angular": "^4.0.0-beta.13",
+    "@ionic/core": "^4.0.0-beta.13",
     "angularx-qrcode": "^1.2.4",
-    "cordova-android": "7.0.0",
+    "cordova-android": "7.1.1",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.3",
+    "ionic-angular": "^3.9.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
@@ -42,14 +44,14 @@
     "@angular-devkit/core": "~0.7.2",
     "@angular-devkit/schematics": "~0.7.2",
     "@angular/cli": "~6.1.1",
-    "@angular/compiler": "~6.1.1",
-    "@angular/compiler-cli": "~6.1.1",
-    "@angular/language-service": "~6.1.1",
+    "@angular/compiler": "^6.1.10",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@ionic/lab": "1.0.9",
-    "@ionic/ng-toolkit": "^1.0.0",
-    "@ionic/schematics-angular": "^1.0.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@ionic/ng-toolkit": "^1.1.0",
+    "@ionic/schematics-angular": "^1.0.7",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
     "@types/node": "~10.9.2",
     "codelyzer": "~4.4.2",
     "jasmine-core": "~2.99.1",
